--- a/public/html/partials/footer.mustache
+++ b/public/html/partials/footer.mustache
@@ -1,3 +1,4 @@
 <footer>
 </footer>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script async src="/js/min/main.min.js?v=x"></script>
